style.css
* {
  margin: 0;
  padding: 0px;
  box-sizing: border-box;
}
body {
  background-color: #212931;
}
.hero-section {
  background-color: #212931;
  padding: 1rem 14.5rem;
}
.hero-container {
  display: flex;
  height: 60vh;
}
.hero-container > div:nth-child(2) {
  display: flex;
  width: 100%;
  justify-content: space-between;
  color: #fff;
  text-align: start;
  padding-top: 5.5rem;
  flex: 1;
}
.hero-text {
  display: flex;
  color: #fff;
  height: 60vh;
  margin-top: 2rem;
}
.hero-text > div:nth-child(1) {
  font-size: 24px;
  font-weight: 900;
  flex: 1;
}
.left-r-text {
  height: 100%;
  width: 100%;
  background-image: url(images/img-1.png);
  background-repeat: no-repeat;
  object-fit: cover;
}
.left-r-text > img {
  width: 100%;
  height: 100%;
}
.right-r {
  display: flex;
  font-size: 18px;
  font-weight: 700;
}
.right-r > div:nth-child(1) {
  display: flex;
  gap: 4rem;
}
.right-r > div:nth-child(2) {
  display: flex;
  flex-direction: column;
  margin: 4rem 0;
}
.right-r > div:nth-child(2) > span > a {
  color: yellow;
  display: flex;
  gap: 2rem;
  margin-top: 2rem;
}
.hero-text > div:nth-child(2) {
  display: flex;
  flex-direction: column;
  flex: 1;
}
.contact-section {
  background-color: #151a1f;
  color: #fff;
  padding-bottom: 7rem;
  position: relative;
}
.contact-section > div:nth-child(1) {
  display: flex;
  justify-content: space-between;
  gap: 12rem;
  padding: 2rem 14.5rem 0;
}
.contact-section > div:nth-child(2) {
  display: flex;
  justify-content: space-between;
  gap: 9rem;
  padding: 0 14.5rem 12rem;
}
.contact-sub > div > p {
  padding-bottom: 20px;
}
.contact-sub > div:nth-child(1) > a {
  color: yellow;
}
.years-experience {
  display: flex;
  gap: 2rem;
}
.years-experience > div {
  display: flex;
  gap: 0.5rem;
  width: 6rem;
}
.years-experience > div > span {
  color: yellow;
  font-weight: 900;
  font-size: 36px;
}
.years-experience > div > p {
  font-size: 12px;
  padding: 2px;
}
.services-section {
  position: relative;
  background-color: #212931;
  padding: 16rem 14.5rem 0;
}
.services-container > div {
  padding: 8rem 4rem;
  background-color: grey;
  z-index: 3;
  color: #fff;
}
.services-container > div:nth-child(1) {
  position: absolute;
  top: -9rem;
  left: 14rem;
}
.services-container > div:nth-child(2) {
  position: absolute;
  top: -9rem;
  left: 30.5rem;
}
.services-container > div:nth-child(3) {
  position: absolute;
  top: -9rem;
  left: 48.5rem;
}
.services-container > span {
  position: absolute;
  top: 20px;
}
.services-container > div:hover {
  background-color: yellow;
}
.creative-work-background {
  display: flex;
  padding: 1rem 14.5rem;
  color: #fff;
  height: 90vh;
}
.creative-work-left {
  display: flex;
  flex-direction: column;
  flex: 1;
}
.creative-work-left span {
  margin-bottom: 0.2rem;
}
.creative-work-left a {
  margin-top: 0.5rem;
  color: yellow;
  margin-right: 2rem;
}
.creative-work-left > a > i {
  padding-left: 10rem;
}
.creative-work-img {
  margin-top: 3rem;
}
.creative-work-right {
  display: flex;
  flex-direction: column;
  gap: 3rem;
  flex: 1;
  align-items: center;
}
.blog-section {
  padding: 1rem 14.5rem;
  background-color: #212931;
  color: #fff;
}
.blog-container {
  display: flex;
}
.blog-container-text {
  display: flex;
}
.blog-container > div:nth-child(1) {
  display: flex;
  flex-direction: column;
  flex: 1;
}
.blog-container > div:nth-child(2) {
  display: flex;
  flex-direction: column;
  gap: 2rem;
  flex: 2;
  height: 35vh;
  padding-right: 2px;
  text-align: end;
}
.blog-right-container > div > span {
  margin-right: 2rem;
  margin-bottom: 2rem;
  text-align: start;
}
.quote-container {
  display: flex;
  justify-content: space-around;
  margin-top: 5rem;
  gap: 8px;
}
.quote-container > div:nth-child(1) {
  flex: 1;
}
.quote-container > div:nth-child(2) {
  flex: 1;
}
.project-section {
  padding: 1rem 14.5rem;
  display: flex;
  justify-content: space-between;
  color: #fff;
  gap: 2rem;
}
.project-section > div:nth-child(1) {
  display: flex;
  flex-direction: column;
  flex: 1;
}

.project-section > div:nth-child(2) {
  display: flex;
  flex-direction: column;
  flex: 1;
}
.project-section > div:nth-child(1) > span {
  margin: 0.2rem 0;
}
.project-section > div:nth-child(2) > label {
  margin-top: 1.5rem;
}
.project-section > div:nth-child(2) > span {
  display: flex;
  flex-direction: column;
  padding-bottom: 0.2rem;
}
.project-section > div:nth-child(2) > input {
  border-bottom: 2px solid #ccc;
  background-color: #212931;
  margin-top: 1rem;
  padding: 1rem;
  color: #fff;
  border-radius: 0.2rem;
  border: 1px solid #ccc;
}
.footer-section {
  padding: 1rem 14.5rem;
  background-color: #212931;
  color: #fff;
  width: fit-content;
  margin: 0 auto;
  display: flex;
  align-items: center;
  flex-direction: column;
}
.footer-section > img {
  padding: 3rem 0;
}
.footer-section > p > span {
  font-size: 14px;
  color: grey;
  padding-left: 0.5rem;
}
.footer-section > div {
  display: flex;
  justify-content: space-between;
  gap: 1rem;
  margin: 2rem 0.5rem;
}
@media screen and (max-width: 1024px) {
  .hero-section {
    padding: 0rem 6.5rem;
  }
  .contact-section {
    height: 95vh;
  }
  .contact-section > div:nth-child(1) {
    gap: 15rem;
    padding: 3rem 6.5rem 0;
  }
  .contact-section > div:nth-child(2) {
    gap: 15rem;
    padding: 2rem 6.5rem 0;
  }
  .services-container > div:nth-child(1) {
    left: 5.5rem;
  }
  .services-container > div:nth-child(2) {
    left: 21.5rem;
  }
  .services-container > div:nth-child(3) {
    left: 39rem;
  }
  .creative-work-background,
  .project-section {
    padding: 1rem 6.5rem;
  }
  .blog-section {
    padding: 10rem 6.5rem;
  }
  .project-section > div:nth-child(2) > input {
    padding: 0.8rem;
  }
}
@media screen and (max-width: 768px) {
  .hero-section {
    padding: 0rem 1.5rem;
  }
  .contact-section > div:nth-child(1) {
    gap: 12rem;
    padding: 3rem 1.5rem 0;
  }
  .contact-section > div:nth-child(2) {
    gap: 9rem;
    padding: 2rem 1.5rem 0;
  }
  .services-container > div:nth-child(1) {
    left: 1.5rem;
  }
  .services-container > div:nth-child(2) {
    left: 15rem;
  }
  .services-container > div:nth-child(3) {
    left: 30rem;
  }
  .services-container > div {
    padding: 8rem 2.7rem;
  }
  .creative-work-background {
    padding: 1.5rem;
  }
}
@media screen and (max-width: 425px) {
  .hero-text {
    /* border: 2px solid red; */
    display: flex;
    flex-direction: column;
    /* height: 140vh; */
    padding: 0;
  }
  .left-r-text {
    object-fit: cover;
    height: 70vh;
  }
  .right-r > div:nth-child(1) {
    display: none;
  }
  .contact-section > div {
    flex-direction: column;
  }
  .contact-section > div:nth-child(1) {
    gap: 0;
    margin-top: 20rem;
  }
  .contact-section > div:nth-child(2) {
    gap: 2rem;
  }
  .services-section {
    padding: 1.5rem;
  }
  .services-container > div:nth-child(1),
  .services-container > div:nth-child(2),
  .services-container > div:nth-child(3) {
    position: static;
    gap: 2rem;
    margin-bottom: 1.8rem;
    border-radius: 5px;
  }
  .creative-work-background {
    flex-direction: column;
    height: 200vh;
  }
  .blog-section {
    padding: 1rem 1.5rem;
  }
  .blog-container {
    flex-direction: column;
  }
  .blog-container > div:nth-child(2) {
    text-align: start;
  }
  .blog-right-container > div > span {
    margin-right: 20px;
  }
  .blog-right-container > div > span:nth-child(3) {
    width: 3px;
    font-size: 16px;
  }
  .quote-container {
    flex-direction: column;
  }
  .quote-container img {
    border-radius: 10%;
    width: 60%;
    padding: 2px auto;
  }
  .project-section {
    flex-direction: column;
    padding: 1rem 1.5rem;
  }
  .footer-section {
    padding: 1.5rem;
  }
}
@media screen and (max-width: 375px) {
  .blog-right-container > div > span {
    margin-right: 5px;
  }
}

